cilium-cli/connectivity/builder/manifests/client-egress-to-entities-world-ccnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: client-egress-to-entities-world-ccnp
spec:
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  - toEndpoints:
    - matchExpressions:
      - { key: 'k8s-app', operator: In, values: [ "kube-dns", "coredns", "node-local-dns", "nodelocaldns" ] }
      - { key: 'io.kubernetes.pod.namespace', operator: In, values: [ "kube-system" ] }
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEndpoints:
    - matchExpressions:
      - { key: 'dns.operator.openshift.io/daemonset-dns', operator: Exists }
      - { key: 'io.kubernetes.pod.namespace', operator: In, values: [ "openshift-dns" ] }
    toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
      - port: "5353"
        protocol: TCP
  - toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
    toEntities:
    - world
